--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                             <a class="nav-link" href="thongtin.html">thông tin</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
+                    <form class="d-flex" role="search" style="margin-left: 100px;">
                         <input
                             class="form-control me-2"
                             type="search"
                             placeholder="Search"
                             aria-label="Search"
                         />
-                        <button class="btn btn-outline-light" type="submit">
+                        <button class="btn btn-outline-dark" type="submit">
                             Search
                         </button>
                     </form>
@@ -195,7 +195,7 @@
 
                             </div>
                         </div>
-        <div class="row" style="margin-top:100px; margin-left: 100px;">      
+        <div class="row" style="margin-top:100px; ">      
             <div class="col-6 col-md-2 mb-3">
               <h5>Thông Tin Chi Tiết</h5>
               <ul class="nav flex-column">
@@ -206,8 +206,8 @@
 
               </ul>
             </div>
-      
-            <div style="margin-left: 500px;"    class="col-md-5 offset-md-1 mb-1">
+      <!-- sửa mấy trang khác đi -->
+            <div style="margin-left: 400px;"    class="col-md-5 offset-md-1 mb-1">
               <form>
                 <h5>Subscribe to our newsletter</h5>
                 <p>Monthly digest of what's new and exciting from us.</p>
