--- a/onetake4.html
+++ b/onetake4.html
@@ -54,7 +54,7 @@
                                 <a class="nav-link" href="thongtin.html">thông tin</a>
                             </li>
                         </ul>
-                        <form class="d-flex" role="search">
+                        <form class="d-flex" role="search" style="margin-left: 100px;">
                             <input
                                 class="form-control me-2"
                                 type="search"
@@ -114,7 +114,7 @@
                         </ul>
                       </div>
                 
-                      <div style="margin-left: 500px;"    class="col-md-5 offset-md-1 mb-1">
+                      <div style="margin-left: 400px;"   class="col-md-5 offset-md-1 mb-1">
                         <form>
                           <h5>Subscribe to our newsletter</h5>
                           <p>Monthly digest of what's new and exciting from us.</p>
